# nicegui-analytics-dashboard

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test.py
app/: __init__.py
app/components/: ui_components.py
app/config/: constants.py
app/pages/: details_page.py  main_page.py
app/routes/: main.py
app/services/: backend_api.py  data_service.py
app/utils/: page_utils.py
backend/core/: character_comprehension.py
backend/database/: __init__.py  sqlite.py
backend/utils/: __init__.py
backend_test/: __init__.py  manager_api.py
fronted_test/: admin_board.py  components.py  constants.py  services.py
frontend/pages/: character_resolution.py  dashboard.py  hanzi_resolution.py  login.py
frontend/shared_components/: __init__.py  authmiddleware.py  config.py  header.py  navigation.py  sidebar.py
frontend/static/css/: custom_root.css
frontend/utils/: css.py  i18n.py
locales/: cn-zh.json  en.json  zh.json
src/backend/: __init__.py  character_comprehension.py
src/backend/config/: config.toml  prompt.toml
src/backend/core/: __init__.py  character_comprehension.py  character_response.py  dataclass.py
src/backend/database/: sqlite.py
src/backend/utils/: paddle_ocr.py
src/config/: config.toml
src/core/: __init__.py
src/core/character_comprehesion/: character_comprehension.py
src/frontend/shared_components/: header.py  sidebar.py
src/web/pages/: __init__.py  char_comprehend.py  char_comprehension.py  home.py  sidebar.py
src/web/pages/dashboard/: config.py  (+1 more)
src/web/utils/: __init__.py  i18n_utils.py
utils/: i18n_utils.py
(+11 files in other folders)
